# ai-native

./: README.md  ai_native_os.py  pyproject.toml
docs/: AI-NATIVE_COMPONENTS.md  AI-NATIVE_CONSTITUTION.md  AI-NATIVE_OWNERS_MANUAL.md  AI-NATIVE_TOOLS.md
src/ai-native/: __init__.py  agent_core.py  lj_kernel.py  multi_agent.py  run_lj_kernel.py  run_multi_agent.py  whiteboard.py
